Get Java Desktop mostly working again. There is still some kind of bug in the display after deleting a list.  Completely baffled.